--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/05.jpg" alt="..." class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/05.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
             <h3>Lonnie Edmund</h3>
             <p>Web Design</p>
@@ -335,7 +335,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/07.jpg" alt="..." class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/07.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
             <h3>Zheng Yijun</h3>
             <p>Overseas Marketing</p>
@@ -345,7 +345,7 @@
     </div>
       <div id="row">
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/08.jpg" alt="..." class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/08.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
             <h3>Laura Garnett</h3>
             <p>Customer Support Specialist</p>
@@ -353,7 +353,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/09.jpg" alt="..." class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/09.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
             <h3>Dashiell Moses</h3>
             <p>App Design</p>
@@ -361,7 +361,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/10.jpg" alt="..." class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/10.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
             <h3>Radha Abhay</h3>
             <p>Lead Engineer</p>
@@ -369,7 +369,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 team">
-        <div class="thumbnail"> <img src="img/team/11.jpg" alt="..." class="img-circle team-img">
+        <div class="thumbnail"> <img src="img/team/11.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
             <h3>Ya Chao</h3>
             <p>AI Engineer</p>
