--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       <div class="col-md-3 col-sm-6 team">
         <div class="thumbnail"> <img src="img/team/09.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
-            <h3>Dashiell Moses</h3>
+            <h3>Devin Moses</h3>
             <p>App Design</p>
           </div>
         </div>
@@ -371,7 +371,7 @@
       <div class="col-md-3 col-sm-6 team">
         <div class="thumbnail"> <img src="img/team/11.JPG" alt="..." class="img-circle team-img">
           <div class="caption">
-            <h3>Ya Chao</h3>
+            <h3>James Chao</h3>
             <p>AI Engineer</p>
           </div>
         </div>
